change getCurrentLeaders api and related code, bugfix on incorrect set status for create/update team