@@ -1,18 +1,17 @@
 package com.fps.svmes.services.impl;
 
+import com.fps.svmes.dto.dtos.user.LeaderDTO;
 import com.fps.svmes.dto.dtos.user.TeamDTO;
 import com.fps.svmes.dto.requests.TeamRequest;
 import com.fps.svmes.models.sql.user.Team;
 import com.fps.svmes.repositories.jpaRepo.user.TeamRepository;
 import com.fps.svmes.services.TeamService;
+import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.modelmapper.ModelMapper;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import com.fps.svmes.repositories.jpaRepo.user.UserRepository;
 import com.fps.svmes.models.sql.user.User;
 import org.springframework.transaction.annotation.Transactional;
@@ -32,16 +31,18 @@ public class TeamServiceImpl implements TeamService {
     @Override
     @Transactional
     public TeamDTO createTeam(TeamRequest teamRequest) {
-        // Map the TeamRequest to the Team entity
         Team team = modelMapper.map(teamRequest, Team.class);
 
-        team.setParent(resolveParent(teamRequest.getParentId()));
-
         if (teamRequest.getCreatedBy() != null) {
-            team.setCreationDetails(teamRequest.getCreatedBy(), 1);
+            team.setCreationDetails(teamRequest.getCreatedBy(), teamRequest.getStatus());
         }
 
-        // Set the leader based on leaderId
+        if (teamRequest.getParentId() != null) {
+            Team parentTeam = teamRepository.findById(teamRequest.getParentId())
+                    .orElseThrow(() -> new IllegalArgumentException("Parent team not found: " + teamRequest.getParentId()));
+            team.setParent(parentTeam);
+        }
+
         if (teamRequest.getLeaderId() != null) {
             User leader = userRepository.findById(teamRequest.getLeaderId())
                     .orElseThrow(() -> new IllegalArgumentException("Leader not found with ID: " + teamRequest.getLeaderId()));
@@ -56,10 +57,7 @@ public class TeamServiceImpl implements TeamService {
             team.setLeader(leader);
         }
 
-        // Save the Team entity
         team = teamRepository.save(team);
-
-        // Map the saved Team entity to the TeamDTO
         return modelMapper.map(team, TeamDTO.class);
     }
 
@@ -68,15 +66,19 @@ public class TeamServiceImpl implements TeamService {
     public TeamDTO updateTeam(Integer id, @Valid TeamRequest teamRequest) {
         Team team = teamRepository.findById(id).orElseThrow(() -> new RuntimeException("Team not found"));
 
-        // Map only non-null properties from DTO to entity
+        // Map only non-null properties from request to team entity
         if (teamRequest.getName() != null) team.setName(teamRequest.getName());
         if (teamRequest.getType() != null) team.setType(teamRequest.getType());
         if (teamRequest.getStartTime() != null) team.setStartTime(teamRequest.getStartTime());
         if (teamRequest.getEndTime() != null) team.setEndTime(teamRequest.getEndTime());
         if (teamRequest.getDescription() != null) team.setDescription(teamRequest.getDescription());
-        if (teamRequest.getParentId() != null) team.setParent(resolveParent(teamRequest.getParentId()));
-        if (teamRequest.getStatus() != null) team.setStatus(teamRequest.getStatus()); // Soft delete
-        if (teamRequest.getUpdatedBy() != null) team.setUpdateDetails(teamRequest.getUpdatedBy(),1);
+        if (teamRequest.getUpdatedBy() != null) team.setUpdateDetails(teamRequest.getUpdatedBy(),teamRequest.getStatus());
+
+        if (teamRequest.getParentId() != null) {
+            Team parentTeam = teamRepository.findById(teamRequest.getParentId())
+                    .orElseThrow(() -> new IllegalArgumentException("Parent team not found: " + teamRequest.getParentId()));
+            team.setParent(parentTeam);
+        }
 
         if (teamRequest.getLeaderId() != null) {
             User newLeader = userRepository.findById(teamRequest.getLeaderId())
@@ -106,21 +108,15 @@ public class TeamServiceImpl implements TeamService {
     }
 
     @Override
+    @Transactional
     public TeamDTO getTeamById(Integer id) {
         Team team = teamRepository.findById(id).orElseThrow(() -> new RuntimeException("Team not found"));
         return modelMapper.map(team, TeamDTO.class);
     }
 
     @Override
-    public List<TeamDTO> getAllTeams() {
-        List<Team> teams = teamRepository.findAll(Sort.by(Sort.Direction.ASC, "id"));
-        return teams.stream()
-                .map(team -> modelMapper.map(team, TeamDTO.class))
-                .collect(Collectors.toList());
-    }
-
     @Transactional(readOnly=true)
-    public List<TeamDTO> getTeamTree() {
+    public List<TeamDTO> getFullTeamTree() {
         List<Team> roots = teamRepository.findByParentIsNull();
         return roots.stream().map(this::mapWithChildren).toList();
     }
@@ -133,11 +129,12 @@ public class TeamServiceImpl implements TeamService {
         teamRepository.save(team);
     }
 
-    private void softDeleteRecursively(Team node, Integer userId) {
-        node.setUpdateDetails(userId, 0);
+    // Helper to soft-delete a team and all descendant teams of it
+    private void softDeleteRecursively(Team team, Integer userId) {
+        team.setUpdateDetails(userId, 0);
 
-        if (node.getChildren() != null && !node.getChildren().isEmpty()) {
-            node.getChildren().forEach(child -> softDeleteRecursively(child, userId));
+        if (team.getChildren() != null && !team.getChildren().isEmpty()) {
+            team.getChildren().forEach(child -> softDeleteRecursively(child, userId));
         }
     }
 
@@ -158,7 +155,7 @@ public class TeamServiceImpl implements TeamService {
             throw new RuntimeException("Team is already active");
         }
 
-        // Rule: allowed if (a) root team OR (b) parent exists AND is active
+        // Prevent activating a team when it has a parent team and parent team is not activated
         if (team.getParent() != null && team.getParent().getStatus() != 1) {
             throw new RuntimeException("Cannot activate team: parent team is inactive");
         }
@@ -168,24 +165,32 @@ public class TeamServiceImpl implements TeamService {
     }
 
     @Override
+    @Transactional
     public TeamDTO getTeamByTeamLeadId(Integer id) {
         Team team = teamRepository.findByLeaderId(id);
+
+        if (team == null) {
+            throw new EntityNotFoundException("No team found for leader ID: " + id);
+        }
+
         return modelMapper.map(team, TeamDTO.class);
     }
 
     @Override
-    public List<Integer> getCurrentLeaderIds() {
+    @Transactional(readOnly = true)
+    public List<LeaderDTO> getCurrentLeaders() {
         return teamRepository.findAll()
                 .stream()
-                .map(Team::getLeader)          // User or null
-                .filter(Objects::nonNull)      // keep only teams that have a leader
-                .map(User::getId)              // convert User → Integer
-                .distinct()                    // in case the same leader heads >1 team
-                .collect(Collectors.toList());
+                .filter(team -> team.getLeader() != null)      // Keep only teams that have a leader
+                .map(team ->  new LeaderDTO(team.getLeader().getId(),
+                        team.getLeader().getName(),
+                        team.getId(),
+                        team.getName()))
+                .toList();
     }
 
     /**
-     * Returns the depth of the team in the hierarchy.
+     * Returns the depth of the target team specified by team id in the hierarchy.
      * root           → 1
      * child of root  → 2
      * grand‑child    → 3 …
@@ -204,12 +209,6 @@ public class TeamServiceImpl implements TeamService {
             cur = cur.getParent();
         }
         return depth;
-    }
-
-    private Team resolveParent(Integer parentId) {
-        if (parentId == null) return null;
-        return teamRepository.findById(parentId)
-                .orElseThrow(() -> new IllegalArgumentException("Parent team not found: " + parentId));
     }
 
     private TeamDTO mapWithChildren(Team entity) {
